--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>自我履歷</title>
+    <title>陳冠宇的個人履歷網站</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <!-- Bootstrap -->
@@ -21,7 +21,7 @@
     <!-- Vue -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.37/vue.global.prod.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-demi/0.13.11/index.iife.js"></script>
-    <!-- pinia -->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pinia/2.0.22/pinia.iife.js"></script>
     <!-- vue-router -->
     <script src="https://unpkg.com/vue-router@4.0.5/dist/vue-router.global.js"></script>
@@ -36,7 +36,14 @@
 <body class="">
     <div id="app">
         <router-view></router-view>
-    </div>
+
+
+
+        <script>
+
+        </script>
+
+
 </body>
 
 </html>
